src/app/button-list/button-list.component.css
button {
    color: #FF9900;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
    margin: 5px;
}

.flexbox {
    display: flex;
    flex-direction: row;
    /* row for  wide monitor, column for rest */
}

.dynamic_button {
    font-size: 20px;
    margin: 0px;
    /* padding: 0px; */
    text-align: center;
    width: auto;
}

.dynamic_button:hover {
    background-color: #8d150c;
}

ul {
    list-style-type: none;
    display: flex;
    align-items: center;
    flex-direction: row;
    font-size: 20px;
    padding: 0px;
    overflow: hidden;
    background-color: #232F3E;
    margin: 0px;
    flex-wrap: wrap;
}

li {
    margin: 0px;
    padding: 0px;
    display: inline-block;
}

::ng-deep .mat-form-field {
    margin-bottom: -1.25em;
}

::ng-deep .mat-focused .mat-form-field-label {
    /*change color of label*/
    color: #FF9900 !important;
}

::ng-deep .mat-form-field-label {
    /*change color of label*/
    color: #FF9900 !important;
}

::ng-deep .mat-form-field-outline {
    /*change color of label*/
    color: #FF9900 !important;
}

::ng-deep.mat-form-field-underline {
    /*change color of underline*/
    background-color: #FF9900 !important;
}

::ng-deep.mat-input-placeholder {
    /*change color of underline*/
    background-color: #FF9900 !important;
}

::ng-deep.mat-form-field-ripple {
    /*change color of underline when focused*/
    background-color: #FF9900 !important;
}

::ng-deep .mat-input-element::placeholder {
    color: #FF9900;
}

::ng-deep .mat-form-field {
    /*change color of label*/
    width: 150px;
}

::ng-deep .mat-input-element {
    /*change color of label*/
    width: 150px;
}

::ng-deep .mat-form-field-infix {
    padding: 0.25em 0 !important;
}

::ng-deep .mat-form-field-label {
    transform: translateY(-12px) !important;
}


* {
    font-family: Arial, Helvetica, sans-serif;
}

